--- a/popup.html
+++ b/popup.html
@@ -1,67 +1,32 @@
-<!DOCTYPE html>
 <html>
 <head>
   <meta charset="UTF-8">
-  <title>Website Goals</title>
-  <style>
-    body {
-      width: 250px;
-    }
-    input[type="number"] {
-      width: 60px;
-      margin-left: 5px;
-      margin-right: 5px;
-    }
-    #currentGoals {
-      margin-top: 10px;
-    }
-    #currentGoals table {
-      width: 100%;
-      border-collapse: collapse;
-    }
-    #currentGoals th {
-      text-align: left;
-      padding: 5px;
-      background-color: #eee;
-      border: 1px solid #ccc;
-    }
-    #currentGoals td {
-      text-align: left;
-      padding: 5px;
-      border: 1px solid #ccc;
-    }
-    #currentGoals .url {
-      max-width: 150px;
-      overflow: hidden;
-      text-overflow: ellipsis;
-      white-space: nowrap;
-    }
-    #currentGoals .timeLimit {
-      width: 50px;
-    }
-    #message.show {
-    color: green;
-    font-weight: bold;
-    }
-  </style>
+  <title>MindfulTabs</title>
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <h2>Website Goals</h2>
-  <button id="showForm">Website Goals</button>
-  <button id="showGoals">Current Goals</button>
-  <div id="formWrapper" style="display:none">
+  <h2>MindfulTabs: Productivity Manager</h2>
+
+  <div class="tab-container">
+    <div class="tab-buttons">
+      <button class="tab-button active" data-tab="formWrapper">Website Goals</button>
+      <button class="tab-button" data-tab="goalsWrapper">Current Goals</button>
+    </div>
+  </div>
+
+  <div id="formWrapper" class="tab-content active">
     <form id="setGoals">
-      <label for="browserTime">Maximum browser time per day (hours):</label>
-      <input type="number" name="browserTime" id="browserTime" min="0" step="0.01" required>
+      <label for="browserTime" id="browserTimeLabel">Maximum browser time per day (minutes):</label>
+      <input type="number" name="browserTime" id="browserTime" min="0" step="1" required>
       <br>
-      <label for="websiteTime">Maximum time for this website per day (hours):</label>
-      <input type="number" name="websiteTime" id="websiteTime" min="0" step="0.01" required>
+      <label for="websiteTime" id="websiteTimeLabel">Maximum time for <span id="websiteUrl">this website</span> per day (minutes):</label>
+      <input type="number" name="websiteTime" id="websiteTime" min="0" step="5" required>
       <br>
       <input type="submit" value="Set Goals">
     </form>
   </div>
   <div id="message"></div>
-  <div id="goalsWrapper" style="display:none">
+  <div id="goalsWrapper" class="tab-content">
     <div id="currentGoals">
       <h3>Current Goals</h3>
       <p>Browsing Time Limit: <span id="browsingLimit"></span></p>
